loopdowhile.Poucet2.scala.error
Compilation error:
Poucet2:19: error: 'while' expected but '}' found.
}
^