loopdowhile.Poucet2.scala.code
while (!sortieTrouvee()) {
	do {
  	var nbrB:Int = 0
  	while (!crossing()) {
  	  avance()
   	 if (estSurBiscuit()) {
   	   nbrB = nbrB + 1
   	 }
    
  	}  
  	if (nbrB >= 3) {
 	   gauche()
 		}
  	else {
   	droite()
  }
}

}
avance()

  